--- a/delivery.html
+++ b/delivery.html
@@ -34,7 +34,7 @@
                 <div class="text-wrapper-11">$24.60</div>
                 <img class="line" src="img/line-5.svg" />
                 <div class="text-wrapper-12">
-                    <a href="home.html" style="text-decoration: none; color: inherit;">Checkout</a>
+                    <a href="index.html" style="text-decoration: none; color: inherit;">Checkout</a>
                   </div>
                   
                 <img class="image-4" src="img1/sub.jpg" />
